--- a/content/projects/goatlang.mdx
+++ b/content/projects/goatlang.mdx
@@ -51,7 +51,7 @@ let age = 20 end
 let is_goat = true end
 ```
 
-It can also be used as a scripting language, here is the simple **calculator** example:
+It is a scripting language, here is the simple **calculator** example:
 
 ```lua
 let a = 20 end
@@ -82,7 +82,7 @@ end
 add(10, 20)
 ```
 
-It has portals, which are protocols that can be used to communicate with other languages (***only python for now***). Here is the simple **portal** example:
+GoatLang has portals, which are protocols that can be used to communicate with other languages (***only python for now***). Here is the simple **portal** example:
 
 ```lua
 include "random" with "python"
