--- a/content/projects/soundstage.mdx
+++ b/content/projects/soundstage.mdx
@@ -2,8 +2,15 @@
 title: "SoundStage"
 description: SoundStage is a MediaPlayer written in Java.
 date: "2022-10-14"
-# url: https://pedal.vercel.app/pypedal
-published: false
+published: true
 repository: ilkergzlkkr/soundstage
 stars: 0
 ---
+
+SoundStage is a final project in OOP lecture where we make a GUI project.
+
+<Container className="border border-2 bg-zinc-900">
+  ![SoundStage](/soundstage/1.png)
+</Container>
+
+Nothing special, just a simple MediaPlayer.
