feat: add discordbot images chore: update dates, stars

--- a/content/projects/discordbot.mdx
+++ b/content/projects/discordbot.mdx
@@ -1,9 +1,8 @@
 ---
 title: "DiscordBot"
 description: A chatbot that primarily focuses on music and moderation. Highly customizable and easy to use.
-date: "2022-12-10"
+date: "2021-05-22"
 published: true
-stars: 19
 ---
 
 ## Long Story About My Learning Journey - Blog
@@ -18,51 +17,64 @@ I wanted to grow more users, for example i shared my bot to a few Discord server
 
 Found a solution to my custom music player. I used the `lavalink` API to play music. Connecting and playing music was very easy, but i had to learn how to use the API in order to customize my experience. Made my own Queue system and added a few commands like `/skip` `/skipto` `/forward` `/volume` `/seek` `/equalizer`. Added a fancy UI to the music player and it was ready to go.
 
-![UI]()
+![UI](/discordbot/1.png)
 
 In a week it was my birthday, i wanted to give myself a gift. I wanted to make my bot reach 200 users, so i shared my bot to a few websites that lists Discord bots. I reached 200 users in a day! I was very happy, in a week i reached 500 users. Insane! 🎊🎉🥳
 
 ### Today
 
-As of today, my bot operates on **300000** users which includes some of Discord employees 😎
+As of today, my bot operates on **300_000!** users which includes some of Discord employees 😎
 
-My main and only goal is to make user experience better.
+My main and only goal is to make user experience better. That's why i'm always working on new features and improving the existing ones. 
 
 ## Features
 
 ### Media Controls
 
-Todo: 
-- Integration with MediaKeys (Play/Pause, Stop, Next, Previous)
+{/* Todo: 
+- Integration with MediaKeys (Play/Pause, Stop, Next, Previous) */}
 
-![MediaControls]()
+I created a web application that is dashboard for my bot. Designed to use media controls in background. You can control the music player from the dashboard with just signing in with discord. You open the dashboard in your browser and you will see mutual guilds with the bot, play or browse however you want. You can even minimize the browser and it will still work. You can even control the music player from your phone.
+
+![MediaControls](/discordbot/2.png)
+
+Media Commands: <u>`Play/Pause`</u> <u>`Previous`</u> <u>`Next`</u> <u>`Stop`</u>
+
+That way, you can use the music player with playing games without commanding in Discord Chat.
+
+![MediaControls](/discordbot/3.png)
 
 ### Autocomplete
 
-![AutoComplete]()
+When you type a song name, it will autocomplete the song name for you. You can select the song you want to play from the list.
+
+![AutoComplete](/discordbot/4.png)
 
 
 ### Moderation
 
-![AutoRole]()
+Bot has `autorole` command that can be used to give roles to new members. You can set a role for new members and bot will give that role to new members.
 
 ### Miscellaneous
 
-- TFT
-- Currency
-- Reminder (opensource)
+- TFT (Teamfight Tactics) - League of Legends
+- Roblox Stats
+- Currency Updates
+- Reminder [`on GitHub`](https://github.com/ilkergzlkkr/pyd-utils)
 
 
 ## For developers
 
-![Diagram/Architecture]()
+TBD: Diagram/Architecture - Code structure / Command Count - Logging
 
-- Supports YouTube, SoundCloud, Spotify, Twitch, Vimeo, Bandcamp, Mixer, HTTP, Local Files, HTTP Live Streaming, Dash, HLS playlists, and M3U8 files.
+{/* ![Diagram/Architecture]() */}
 
-- Sharding / Hosting
+- Audio System supports YouTube, SoundCloud, Spotify, Twitch, Vimeo, Bandcamp, Mixer, HTTP, Local Files, HTTP Live Streaming.
 
-- File - Code structure / Command Count
+{/* - Sharding / Hosting */}
 
-- Logging
+{/* - File - Code structure / Command Count */}
+
+{/* - Logging */}
 
 Thanks to my friends for all the support and help.  
