--- a/content/projects/pyd-pedal-next.mdx
+++ b/content/projects/pyd-pedal-next.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Music Effects"
 description: A music equalizer app that primarily focuses on the slowed-down & reverb effects of the music.
-date: "2022-03-14"
-# url: https://pedal.vercel.app/pypedal
+date: "2022-08-16"
+url: https://pedal.vercel.app/pypedal
 published: true
 repository: ilkergzlkkr/pyd-pedal
 stars: 1
@@ -26,6 +26,6 @@ You import audio/video files or paste a link to a YouTube video. Then, you can s
 
 ## For Developers
 
-At first i made this app with python server that uses `ffmpeg` + `youtube-dl` + `spotify/pedalboard` with concurrent audio downloading and processing. But it was too slow and i couldn't find a way to make it faster. So i decided to make it `client sided` app
+At first i made this app with python server that uses [`ffmpeg`](https://ffmpeg.org) + [`youtube-dl`](https://github.com/ytdl-org/youtube-dl) + [`spotify/pedalboard`](https://github.com/spotify/pedalboard) with concurrent audio downloading and processing. But it was too slow and i couldn't find a way to make it faster. So i decided to make it **client sided** app
 
-Now, it uses `Tone.js`, no server behind. Check out the [source code](https://github.com/ilkergzlkkr/pyd-pedal-next) for more info.
+Now, it uses [`Tone.js`](https://tonejs.github.io), no server behind. Check out the [source code](https://github.com/ilkergzlkkr/pyd-pedal-next) for more info.
