chore: add reference to the original repos

--- a/content/projects/pyd-pedal-next.mdx
+++ b/content/projects/pyd-pedal-next.mdx
@@ -9,7 +9,7 @@ stars: 1
 ---
 
 
-We needed something to slow down the music and add reverb to it. Just like trends on TikTok/YouTube. So, we created this app to do that.
+Me and my friends needed some app to slow down the song and add reverb to it. Just like trends on TikTok/YouTube. So, i created this app to do that.
 
 ![Pedal](/equalizer/equalizer-start.png)
 
