--- a/content/projects/discordbot.mdx
+++ b/content/projects/discordbot.mdx
@@ -13,13 +13,13 @@ I wanted to add more features to it, so I started learning about the Discord API
 
 At the time there was musicbots that were popular, so I decided to add music features to my bot. I used the `youtube-dl` + `ffmpeg` combo to download the audio from YouTube videos to my server and then play it. It was a very basic music bot, but it was enough for me and my friends.
 
-I wanted to grow more users, for example i shared my bot to a few Discord servers which were my friends' servers. But i learned something very important thing: `Race Conditions`. I didn't know what it was at the time, but i learned it the hard way. I had a command called `/play` which played music from YouTube. I had a few users in my server and i was playing music for them. But when i shared my bot to other servers, i had more users. When i played music for them, it stopped playing music for the users in my server. I didn't know what was happening, so i started debugging. I found out that the music was playing for the users in my server, but it was not playing for the users in other servers. <u>When the song ended, it tries to delete the downloaded audio file from the server</u>. I had to delete artifacts from the server in order to operate. 
+I wanted to grow more users, for example i shared my bot to a few Discord servers which were my friends' servers. But i learned something very important thing: [`Race Conditions`](https://en.wikipedia.org/wiki/Race_condition#In_software). I didn't know what it was at the time, but i learned it the hard way. I had a command called `/play` which played music from YouTube. I had a few users in my server and i was playing music for them. But when i shared my bot to other servers, i had more users. When i played music for them, it stopped playing music for the users in my server. I didn't know what was happening, so i started debugging. I found out that the music was playing for the users in my server, but it was not playing for the users in other servers. ***When the song ends, bot tries to delete the downloaded audio file from the server, which causes the bug***. I had to delete artifacts from the server in order to operate. 
 
-Found a solution to my custom music player. I used the `lavalink` API to play music. Connecting and playing music was very easy, but i had to learn how to use the API in order to customize my experience. Made my own Queue system and added a few commands like `/skip` `/skipto` `/forward` `/volume` `/seek` `/equalizer`. Added a fancy UI to the music player and it was ready to go.
+Found a solution to my custom music player. I used the [`lavalink`](https://github.com/lavalink-devs/Lavalink) API to play music. Connecting and playing music was very easy, but i had to learn how to use the API in order to customize my experience. Made my own Queue system and added a few commands like `/skip` `/skipto` `/forward` `/volume` `/seek` `/equalizer`. Added a fancy UI to the music player and it was ready to go.
 
 ![UI](/discordbot/1.png)
 
-In a week it was my birthday, i wanted to give myself a gift. I wanted to make my bot reach 200 users, so i shared my bot to a few websites that lists Discord bots. I reached 200 users in a day! I was very happy, in a week i reached 500 users. Insane! 🎊🎉🥳
+In a week it was my birthday, i wanted to give myself a gift. I wanted to make my bot reach 200 users, so i shared my bot to a few websites that lists Discord bots. Bot reached **200** users **in a day!** I was very happy, **in a week** bot reached **500** users. Insane! 🎊🎉🥳
 
 ### Today
 
@@ -60,7 +60,7 @@ Bot has `autorole` command that can be used to give roles to new members. You ca
 - TFT (Teamfight Tactics) - League of Legends
 - Roblox Stats
 - Currency Updates
-- Reminder [`on GitHub`](https://github.com/ilkergzlkkr/pyd-utils)
+- Reminder [`opensource`](https://github.com/ilkergzlkkr/pyd-utils)
 
 
 ## For developers
